--- a/style.css
+++ b/style.css
@@ -372,6 +372,10 @@ body {
 }
 
 @media only screen and (min-width: 1200px) {
+     .tech_card {
+        margin: 50px;
+    }
+    
     .flipster h2 {
         font-size: 34px;
         font-weight: 400;
