--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     overflow-x: hidden;
     background-color: #202060;
     color: white;
+    font-family: 'Albra grotesk', sans-serif;
 }
 
 .tech_card img {
