--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+@font-face {
+    font-family: "Albra grotesk regular";
+    src: url("../NativoTechCarousel//Albra\ Grotesk\ Regular.otf") format("otf");
+    font-weight: 400;
+  }
+  @font-face {
+    font-family: "Albra grotesk bold";
+    src: url("../NativoTechCarousel//Albra\ Grotesk\ Bold.otf.otf") format("otf");
+    font-weight: 700;
+  }
+
 body {
     overflow-x: hidden;
     background-color: #202060;
     color: white;
-    font-family: 'Albra grotesk', sans-serif;
+    font-family: 'Albra grotesk regular', sans-serif;
 }
-
+.flipster h4 {
+    font-family: "Albra grotesk bold";
+}
 .tech_card img {
     width: 100%;
 }
